--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     align-items: center;
     background-color: #82d1c3;
     border-bottom: 10px solid #5e6363;
-    height: 7%;
+    height: 7vh;
 }
 
 h1 {
@@ -26,49 +26,73 @@ h1 {
 /* || Formatting for container */
 .content-container {
     display: flex;
-    height: calc(90vh - 10px);
+    height: calc(88vh - 10px);
 }
 
 .grid-container {
-    height: calc(93vh - 20px);
-    width: calc(93vh - 20px);
+    height: calc(88vh - 10px);
+    width: calc(88vh - 10px);
     display: grid;
-    border-bottom: 10px solid #5e6363;
+    border-left: 1px solid #5e6363;
+    border-right: 1px solid #5e6363;
+    border-bottom: 1px solid #5e6363;
+    background-color: #5e6363;
 }
 
 .left-holder,.right-holder {
     flex-grow: 1;
-    height: calc(93vh - 10px);
+    height: calc(88vh - 10px);
 }
 
 .left-holder {
-    border-right: 10px solid #5e6363;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     flex-basis: 0;
+
 }
 
-.right-holder {
-    border-left: 10px solid #5e6363;
+.menu-item {
+    margin-left: 15px;
+    margin-top: 20px;
+    font-size: 15px;
 }
 
 .clean-button {
-    font-size: 15px;
-    border: 1px solid #5e6363;
+    font-size: 20px;
+    border: 2px solid #5e6363;
     background-color: white;
     border-radius: 10px;
     color: black;
+    align-self: center;
+    margin-bottom: 10px;
+    margin-left: 0;
     
+}
+
+.current-color {
+    margin-top: 30px;
 }
 
 #grid-size {
     width: 30px;
 }
 
-.menu-item {
-    margin-left: 5px;
-    margin-top: 10px;
-    font-size: 15px;
+input[type='checkbox'] {
+    margin-left: 20px;
 }
+
+#shading-label {
+    margin-top: 20px;
+}
+
+
+.footer {
+    height: 5vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 
